--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,4 +3,14 @@ html, body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: rgb(20, 20, 20);
+}
+
+::selection {
+  background-color: rgb(174, 0, 255);
+  color: rgb(255, 255, 255);
+}
+
+::-webkit-scrollbar {
+  width: 0;
 }
