--- a/styles/Modal.module.scss
+++ b/styles/Modal.module.scss
@@ -25,6 +25,11 @@
         left: 50%;
         transform: translate(-50%, -50%);
         background-color: rgb(0, 0, 0);
+
+        @media ( max-width: 400px ) {
+            width: 100vw;
+            height: 100vh;
+        }
     }
 }
 
