--- a/styles/database/Get.module.scss
+++ b/styles/database/Get.module.scss
@@ -10,7 +10,9 @@
     padding: 20px;
     gap: 30px;
 
+    //Targeta de la receta
     .item {  
+        text-decoration: none;
 
         //Contenedor de la imagen 
         .image {
@@ -22,10 +24,11 @@
             cursor: pointer;
 
             //Propiedades de la imagen, para que siempre sea la misma
-            img {
+            div {
                 width: 300px;
                 height: 300px;
-                object-fit: cover;
+                background-position: center;
+                background-size: cover;
                 border-radius: 10px;
             }
 
@@ -35,8 +38,8 @@
                 transform: scale(1.02);
                 
                 //Efecto de la luz en la imagen
-                img {    
-                    box-shadow: 0px 0px 50px rgba(255, 196, 0, 0.438);
+                div {    
+                    box-shadow: 0px 0px 50px rgba(212, 0, 255, 0.438);
                 }
             }
         }
