--- a/styles/style.scss
+++ b/styles/style.scss
@@ -5,7 +5,7 @@ html, body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-color: rgb(15, 15, 15);
+  background-color: rgb(10, 10, 10);
 }
 
 //Selector de elementos personalizado.
@@ -16,5 +16,16 @@ html, body {
 
 //Barra de scroll vertical 'eliminada'.
 ::-webkit-scrollbar {
-  width: 0;
+  width: 5px;
+}
+
+//scrollnar-thumb de el contenedor
+::-webkit-scrollbar-thumb {
+  background-color: rgba(249, 249, 249, 0.8);
+  border-radius: 999px;
+}
+
+//Estilo del scrollnar-thumb al ser clickeado
+::-webkit-scrollbar-thumb:active {
+  background-color: rgba(249, 249, 249, 1);
 }
