--- a/styles/content/Feed.module.scss
+++ b/styles/content/Feed.module.scss
@@ -1,18 +1,42 @@
-.bar {
-    background-color: rgb(0, 0, 0);
-    position: sticky;
-    top: 0;
-    z-index: 900;
-    opacity: 0.9;
-    height: 120px;
-    margin-bottom: 40px;
+.navbar {
+    background-color: transparent;
+    display: flex;
+    justify-content: flex-end;
+    gap: 20px;
+    margin: 40px;
+    color: white;
+
+    a {
+        display: grid;
+        place-content: center;
+        height: 20px;
+        width: 20px;
+        padding: 20px;
+        font-size: 20px;
+        border: solid 4px rgb(30, 30, 30);
+        box-shadow: 0px 0px 50px rgb(0, 0, 0);
+        border-radius: 20px;
+        text-decoration: none;
+        background: linear-gradient(to bottom, rgb(25, 25, 25), rgb(5, 5, 5));
+        transition: 333ms;
+        cursor: pointer;
+
+        &:last-child {
+            background-position: center;
+        }
+
+        &:hover {
+            border-color: rgba(249, 249, 249, 0.8);
+            box-shadow: 0px 0px 50px rgba(1, 111, 255, 0.4);
+        }
+    }
 }
 
 //Contenedor donde se organizan los bloques
 .wrapper {
     width: 80%;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     margin: auto;
     gap: 20px;
 
@@ -26,13 +50,50 @@
         box-shadow: 0px 0px 50px rgb(0, 0, 0);
         border-radius: 20px;
         text-decoration: none;
-        background: linear-gradient(to bottom, rgb(30, 30, 30), rgb(10, 10, 10));
+        background: linear-gradient(to bottom, rgb(25, 25, 25), rgb(5, 5, 5));
         transition: 333ms;
+        cursor: pointer;
 
-        //Efecto de escalado y vambio de color en el borde
+        //Efecto de cambio de color en el borde
         &:hover {
             border-color: rgba(249, 249, 249, 0.8);
-            transform: scale(1.02);
+            box-shadow: 0px 0px 50px rgba(1, 111, 255, 0.4);
+        }
+
+        //Cambio de color de fondo en el elemento '1'
+        &:nth-child(1):hover {
+            background: linear-gradient(
+                to bottom, 
+                rgb(255, 0, 212), 
+                rgb(255, 0, 100)
+            );
+        }
+
+        //Cambio de color de fondo en el elemento '2'
+        &:nth-child(2):hover {
+            background: linear-gradient(
+                to bottom, 
+                rgb(21, 255, 0), 
+                rgb(21, 255, 200)
+            );
+        }
+
+        //Cambio de color de fondo en el elemento '3'
+        &:nth-child(3):hover {
+            background: linear-gradient(
+                to bottom, 
+                rgb(255, 102, 0), 
+                rgb(255, 102, 150)
+            );
+        }
+
+        //Cambio de color de fondo en el elemento '4'
+        &:nth-child(4):hover {
+            background: linear-gradient(
+                to bottom, 
+                rgb(98, 0, 255), 
+                rgb(200, 0, 255)
+            );
         }
     }
 }
