--- a/styles/database/Get.module.scss
+++ b/styles/database/Get.module.scss
@@ -1,13 +1,13 @@
 //Contenedor donde se renderiza nuestra lista de datos
 .wrapper {
-    margin: 20px;
+    margin: 30px;
     background-color: transparent;
     display: flex;
     flex-direction: row;
     max-width: 100%;
     overflow: auto;
     color: rgb(255, 255, 255);
-    padding: 20px;
+    padding: 30px;
     gap: 30px;
 
     //Targeta de la receta
@@ -16,7 +16,6 @@
 
         //Contenedor de la imagen 
         .image {
-            position: relative;
             padding: 5px;
             border: solid 4px transparent;
             border-radius: 20px;
@@ -26,7 +25,7 @@
             //Propiedades de la imagen, para que siempre sea la misma
             div {
                 width: 300px;
-                height: 300px;
+                height: 350px;
                 background-position: center;
                 background-size: cover;
                 border-radius: 10px;
@@ -36,10 +35,9 @@
             &:hover {
                 border-color: rgba(249, 249, 249, 0.8);
                 transform: scale(1.02);
-                
-                //Efecto de la luz en la imagen
-                div {    
-                    box-shadow: 0px 0px 50px rgba(212, 0, 255, 0.438);
+
+                div {
+                    box-shadow: 0px 0px 50px rgba(1, 111, 255, 0.4);
                 }
             }
         }
@@ -57,6 +55,7 @@
 
             //Estilo de los subtitulos de la receta
             h3 {
+                font-weight: normal;
                 font-size: 20px;
                 margin: 0;
                 color: rgb(150, 150, 150);
@@ -71,7 +70,7 @@
 
     //scrollnar-thumb de el contenedor
     &::-webkit-scrollbar-thumb {
-        background-color: rgba(249, 249, 249, 0.8);
+        background-color: rgb(30, 30, 30);
         border-radius: 999px;
     }
 
