--- a/styles/content/Feed.module.scss
+++ b/styles/content/Feed.module.scss
@@ -4,15 +4,16 @@
     justify-content: flex-end;
     gap: 20px;
     margin: 40px;
-    color: white;
 
-    a {
+    .item {
+        font-weight: bolder;
+        color: white;
         display: grid;
         place-content: center;
         height: 20px;
         width: 20px;
         padding: 20px;
-        font-size: 20px;
+        font-size: 30px;
         border: solid 4px rgb(30, 30, 30);
         box-shadow: 0px 0px 50px rgb(0, 0, 0);
         border-radius: 20px;
@@ -28,8 +29,15 @@
         &:hover {
             border-color: rgba(249, 249, 249, 0.8);
             box-shadow: 0px 0px 50px rgba(1, 111, 255, 0.4);
+            background: linear-gradient(to bottom, rgba(1, 111, 255, 0.4), rgb(200, 0, 255));
         }
     }
+}
+
+.title {
+    margin-top: 60px;
+    text-align: center;
+    color: rgb(255, 255, 255);
 }
 
 //Contenedor donde se organizan los bloques
@@ -50,7 +58,10 @@
         box-shadow: 0px 0px 50px rgb(0, 0, 0);
         border-radius: 20px;
         text-decoration: none;
-        background: linear-gradient(to bottom, rgb(25, 25, 25), rgb(5, 5, 5));
+        background: linear-gradient(to bottom, 
+            rgb(25, 25, 25), 
+            rgb(5, 5, 5)
+        );
         transition: 333ms;
         cursor: pointer;
 
