--- a/styles/content/Main.module.scss
+++ b/styles/content/Main.module.scss
@@ -18,7 +18,7 @@
         box-shadow: 0px 0px 50px rgb(0, 0, 0);
         border-radius: 20px;
         text-decoration: none;
-        background: linear-gradient(to bottom, rgb(25, 25, 25), rgb(5, 5, 5));
+        background: rgb(0, 0, 0);
         transition: 333ms;
         cursor: pointer;
 
@@ -29,9 +29,15 @@
         &:hover {
             border-color: rgba(249, 249, 249, 0.8);
             box-shadow: 0px 0px 50px rgba(1, 111, 255, 0.4);
-            background: linear-gradient(to bottom, rgba(1, 111, 255, 0.4), rgb(200, 0, 255));
+            background: rgb(30, 30, 30);
         }
     }
+}
+
+.show {
+    background-color: red;
+    width: 100vw;
+    height: 300px;
 }
 
 .title {
@@ -44,7 +50,7 @@
 .wrapper {
     width: 80%;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
     margin: auto;
     gap: 20px;
 
@@ -58,10 +64,7 @@
         box-shadow: 0px 0px 50px rgb(0, 0, 0);
         border-radius: 20px;
         text-decoration: none;
-        background: linear-gradient(to bottom, 
-            rgb(25, 25, 25), 
-            rgb(5, 5, 5)
-        );
+        background: rgb(0, 0, 0);
         transition: 333ms;
         cursor: pointer;
 
