--- a/styles/database/Get.module.scss
+++ b/styles/database/Get.module.scss
@@ -17,7 +17,7 @@
         //Contenedor de la imagen 
         .image {
             padding: 5px;
-            border: solid 4px transparent;
+            border: solid 4px rgb(30, 30, 30);
             border-radius: 20px;
             transition: 333ms;
             cursor: pointer;
@@ -35,9 +35,9 @@
             &:hover {
                 border-color: rgba(249, 249, 249, 0.8);
                 transform: scale(1.02);
-
+                
                 div {
-                    box-shadow: 0px 0px 50px rgba(200, 0, 255, 0.3);
+                    box-shadow: 0px 0px 50px rgba(1, 111, 255, 0.4);
                 }
             }
         }
