--- a/styles/content/Main.module.scss
+++ b/styles/content/Main.module.scss
@@ -34,10 +34,49 @@
     }
 }
 
-.show {
-    background-color: red;
-    width: 100vw;
-    height: 300px;
+.special {
+    background-color: rgb(0, 0, 0);
+    width: 90vw;
+    min-height: 500px;
+    margin: auto;
+    margin-top: 60px;
+    border: solid 4px rgb(30, 30, 30);
+    box-sizing: border-box;
+    transition: 333ms;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    border-radius: 20px;
+    padding: 5px;
+
+    &:hover {
+        border-color: rgba(249, 249, 249, 0.8);
+        box-shadow: 0px 0px 50px rgba(1, 111, 255, 0.4);
+    }
+
+    a {
+        text-decoration: none;
+
+        div {
+            border-radius: 0;
+            box-sizing: border-box;
+            background-position: center;
+            background-size: cover;
+            height: 500px;
+            width: auto;
+            transition: 333ms;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+            padding: 40px;
+            cursor: pointer;
+
+            h1 {
+                color: rgb(255, 255, 255);
+                margin: 0;
+                transition: 333ms;
+            }
+        }
+    }
 }
 
 .title {
@@ -52,6 +91,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
     margin: auto;
+    margin-top: 60px;
     gap: 20px;
 
     //Contenedor de bloque de enlace
