--- a/styles/database/Get.module.scss
+++ b/styles/database/Get.module.scss
@@ -13,6 +13,7 @@
     //Targeta de la receta
     .item {  
         text-decoration: none;
+        transition: 333ms;
 
         //Contenedor de la imagen 
         .image {
