--- a/styles/content/Main.module.scss
+++ b/styles/content/Main.module.scss
@@ -91,6 +91,7 @@
     margin-top: 60px;
     text-align: center;
     color: rgb(255, 255, 255);
+    transition: 333ms;
 }
 
 //Contenedor donde se organizan los bloques
