--- a/styles/content/Main.module.scss
+++ b/styles/content/Main.module.scss
@@ -18,7 +18,7 @@
         box-shadow: 0px 0px 50px rgb(0, 0, 0);
         border-radius: 20px;
         text-decoration: none;
-        background: rgb(0, 0, 0);
+        background: rgb(30, 30, 30);
         transition: 333ms;
         cursor: pointer;
 
@@ -26,10 +26,17 @@
             background-position: center;
         }
 
+        &:nth-child(1):hover {
+            background: rgb(15, 15, 15);
+        }
+
+        &:nth-child(2):hover {
+            background: rgb(15, 15, 15);
+        }
+
         &:hover {
             border-color: rgba(249, 249, 249, 0.8);
             box-shadow: 0px 0px 50px rgba(1, 111, 255, 0.4);
-            background: rgb(30, 30, 30);
         }
     }
 }
@@ -157,6 +164,63 @@
                 rgb(98, 0, 255), 
                 rgb(200, 0, 255)
             );
+        }
+    }
+}
+
+.modalOpen {
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.8);
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 999;
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
+    transition: 333ms;
+
+    &:target {
+        visibility: visible;
+        opacity: 1;
+        pointer-events: auto;
+    }
+
+    div {
+        min-width: fit-content;
+        height: fit-content;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        padding: 40px;
+        transform: translate(-50%, -50%);
+        background: rgb(0, 0, 0);
+        display: flex;
+        flex-direction: column;
+        gap: 40px;
+
+        a {
+            font-weight: bolder;
+            color: white;
+            display: grid;
+            place-content: center;
+            height: 20px;
+            width: 20px;
+            padding: 20px;
+            font-size: 30px;
+            border: solid 4px rgb(30, 30, 30);
+            box-shadow: 0px 0px 50px rgb(0, 0, 0);
+            border-radius: 20px;
+            text-decoration: none;
+            background: rgb(30, 30, 30);
+            transition: 333ms;
+            cursor: pointer;
+
+            &:hover {
+                border-color: rgba(249, 249, 249, 0.8);
+                box-shadow: 0px 0px 50px rgba(1, 111, 255, 0.4);
+            }
         }
     }
 }
