--- a/styles/content/Main.module.scss
+++ b/styles/content/Main.module.scss
@@ -1,18 +1,20 @@
+//Barra de navegacion donde se muestran los botones de '+', '?' y de perfil
 .navbar {
     background-color: transparent;
     display: flex;
+    width: 90%;
     justify-content: flex-end;
+    margin: auto;
     gap: 20px;
-    margin: 40px;
 
+    //Elemento dentro del navbar
     .item {
         font-weight: bolder;
         color: white;
         display: grid;
         place-content: center;
-        height: 20px;
-        width: 20px;
-        padding: 20px;
+        height: 60px;
+        width: 60px;
         font-size: 30px;
         border: solid 4px rgb(30, 30, 30);
         box-shadow: 0px 0px 50px rgb(0, 0, 0);
@@ -22,92 +24,88 @@
         transition: 333ms;
         cursor: pointer;
 
+        //Centrado de la imagen de perfil
         &:last-child {
             background-position: center;
         }
 
+        //Color de fondo al hacer hover en el boton '+'
         &:nth-child(1):hover {
             background: rgb(15, 15, 15);
         }
 
-        &:nth-child(2):hover {
-            background: rgb(15, 15, 15);
-        }
-
-        &:hover {
+        //Color de fondo al hacer hover en el boton '?'
+        &:nth-child(3):hover {
             border-color: rgba(249, 249, 249, 0.8);
-            box-shadow: 0px 0px 50px rgba(1, 111, 255, 0.4);
         }
     }
 }
 
+//Contenedor de las recetas 'destacadas'
 .special {
-    background-color: rgb(0, 0, 0);
-    width: 90vw;
-    min-height: 500px;
+    width: 80vw;
+    display: flex;
+    flex-direction: row;
+    height: fit-content;
     margin: auto;
-    margin-top: 60px;
-    border: solid 4px rgb(30, 30, 30);
-    box-sizing: border-box;
+    background-color: transparent;
+    padding: 40px;
+    overflow-x: auto;
+    gap: 40px;
     transition: 333ms;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    border-radius: 20px;
-    padding: 5px;
 
-    &:hover {
-        border-color: rgba(249, 249, 249, 0.8);
-        box-shadow: 0px 0px 50px rgba(1, 111, 255, 0.4);
+    &::-webkit-scrollbar {
+        height: 5px;
     }
 
     a {
         text-decoration: none;
+        height: 40rem;
+        min-width: 100%;
+        transition: 333ms;
+        border: solid 4px rgb(22, 22, 22);
+        box-shadow: 0px 0px 50px rgb(0, 0, 0);
+        border-radius: 20px;
+        cursor: pointer;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        padding: 20px;
+        background-position: center;
+        background-size: cover;
 
-        div {
-            border-radius: 0;
-            box-sizing: border-box;
-            background-position: center;
-            background-size: cover;
-            height: 500px;
-            width: auto;
-            transition: 333ms;
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-end;
-            padding: 40px;
-            cursor: pointer;
-
-            h1 {
-                color: rgb(255, 255, 255);
-                margin: 0;
-                transition: 333ms;
-            }
+        .title {
+            font-size: 2rem;
         }
-    }
 
-    @media ( max-width: 1000px ) {
-        overflow-x: auto;
-
-        &::-webkit-scrollbar{
-            height: 0;
+        &:hover {
+            border-color: rgba(249, 249, 249, 0.8);
         }
     }
 }
 
-.title {
-    margin-top: 60px;
+
+.title, .text {
+    margin: 20px;
     text-align: center;
-    color: rgb(255, 255, 255);
     transition: 333ms;
+}
+
+.text {
+    color: rgb(150, 150, 150);
+}
+
+.title {
+    margin: 0;
+    color: rgb(255, 255, 255);
 }
 
 //Contenedor donde se organizan los bloques
 .wrapper {
-    width: 80%;
+    width: 75%;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
     margin: auto;
-    margin-top: 60px;
     gap: 20px;
 
     //Contenedor de bloque de enlace
@@ -116,54 +114,17 @@
         place-content: center;
         height: 130px;
         font-size: 50px;
-        border: solid 4px rgb(30, 30, 30);
+        border: solid 4px rgb(22, 22, 22);
         box-shadow: 0px 0px 50px rgb(0, 0, 0);
         border-radius: 20px;
         text-decoration: none;
-        background: rgb(0, 0, 0);
+        background-color: rgb(12, 12, 12);
         transition: 333ms;
         cursor: pointer;
 
         //Efecto de cambio de color en el borde
         &:hover {
             border-color: rgba(249, 249, 249, 0.8);
-            box-shadow: 0px 0px 50px rgba(1, 111, 255, 0.4);
-        }
-
-        //Cambio de color de fondo en el elemento '1'
-        &:nth-child(1):hover {
-            background: linear-gradient(
-                to bottom, 
-                rgb(255, 0, 212), 
-                rgb(255, 0, 100)
-            );
-        }
-
-        //Cambio de color de fondo en el elemento '2'
-        &:nth-child(2):hover {
-            background: linear-gradient(
-                to bottom, 
-                rgb(21, 255, 0), 
-                rgb(21, 255, 200)
-            );
-        }
-
-        //Cambio de color de fondo en el elemento '3'
-        &:nth-child(3):hover {
-            background: linear-gradient(
-                to bottom, 
-                rgb(255, 102, 0), 
-                rgb(255, 102, 150)
-            );
-        }
-
-        //Cambio de color de fondo en el elemento '4'
-        &:nth-child(4):hover {
-            background: linear-gradient(
-                to bottom, 
-                rgb(98, 0, 255), 
-                rgb(200, 0, 255)
-            );
         }
     }
 }
@@ -188,29 +149,32 @@
     }
 
     div {
-        min-width: fit-content;
-        height: fit-content;
+        max-width: 50vw;
+        min-width: 50vw;
+        max-height: 95vh;
         position: absolute;
         top: 50%;
         left: 50%;
         padding: 40px;
         transform: translate(-50%, -50%);
-        background: rgb(0, 0, 0);
+        background: rgb(30, 30, 30);
         display: flex;
         flex-direction: column;
-        gap: 40px;
+        gap: 20px;
+        border-radius: 20px;
+        color: rgb(255, 255, 255);
+        overflow-x: auto;
 
         a {
             font-weight: bolder;
-            color: white;
+            color: rgb(0, 0 ,0);
             display: grid;
             place-content: center;
             height: 20px;
             width: 20px;
             padding: 20px;
             font-size: 30px;
-            border: solid 4px rgb(30, 30, 30);
-            box-shadow: 0px 0px 50px rgb(0, 0, 0);
+            border: solid 4px transparent;
             border-radius: 20px;
             text-decoration: none;
             background: rgb(30, 30, 30);
@@ -218,9 +182,16 @@
             cursor: pointer;
 
             &:hover {
-                border-color: rgba(249, 249, 249, 0.8);
-                box-shadow: 0px 0px 50px rgba(1, 111, 255, 0.4);
+                color: rgb(255, 255, 255);
             }
         }
     }
+}
+
+.content {
+    margin-top: 80px;
+    margin-bottom: 80px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
