--- a/styles/database/GetType.module.scss
+++ b/styles/database/GetType.module.scss
@@ -5,15 +5,15 @@
     grid-auto-rows: minmax(300px, 1fr);
     gap: 20px;
     margin: 40px;
+    min-height: 100vh;
 
-    div {
+    a {
         background-position: center;
         background-size: cover;
         border-radius: 20px;
-        border: solid 4px rgb(30, 30, 30);
+        border: solid 4px rgb(15, 15, 15);
         transition: 333ms;
         cursor: pointer;
-
         &:hover {
             border-color: rgba(249, 249, 249, 0.8);
         }
